docs: completando documentação de autenticação
